MaterialTree - Fixed Alignment of Icons
MaterialTree - convert all loops to Java 8 foreach
MaterialTree Test - checkSelectedItem
       - checkExpandAndColapse

--- a/src/main/resources/gwt/material/design/addins/client/tree/resources/css/tree.css
+++ b/src/main/resources/gwt/material/design/addins/client/tree/resources/css/tree.css
@@ -14,6 +14,8 @@
 
 .tree-item i{
     margin-top: -2px;
+    float: left;
+    margin-right: 8px;
 }
 
 .tree-item img{
